force-app/main/default/objects/Technical_Sales_Expert_Case__c/Technical_Sales_Expert_Case__c.object-meta.xml
<CustomObject>
    <description>Used to manage requests for TSEs</description>
    <label>Support TSE Request</label>
    <nameField>
        <displayFormat>TSE-Case-{0000}</displayFormat>
        <label>TSE Case</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support TSE Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>