force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>