force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>