force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Case_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Effective_Date__c</fullName>
    <formula>Case__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Effective Date</label>
    <type>Date</type>
</CustomField>