force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Check_All__c.field-meta.xml
<CustomField>
    <fullName>Check_All__c</fullName>
    <formula>if(or( Check_Primary_Business__c &lt;&gt; &quot;Ok&quot;
,Check_Specialist__c &lt;&gt; &quot;Ok&quot;
,Check_Territory__c &lt;&gt; &quot;Ok&quot;
), &quot;Review&quot;, &quot;Ok&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check All</label>
    <type>Text</type>
</CustomField>