force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Check_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Check_Primary_Business__c</fullName>
    <formula>IF(Proposed_Product_Primary_Business__c = Proposed_Specialist_Primary_Business__c
,IMAGE(&quot;https:///cleanharbors.my.salesforce.com/resource/1499014065000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;, &quot;Ok&quot;)
,IMAGE(&quot;https://cleanharbors.my.salesforce.com/resource/1499014065000/GraphicsPackNew/fatcow/farmfresh/16/flag_yellow.png&quot;, &quot;Mismatch&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Primary Business</label>
    <type>Text</type>
</CustomField>