force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Check_Territory__c.field-meta.xml
<CustomField>
    <fullName>Check_Territory__c</fullName>
    <formula>if ( Account_Territory__c =  Proposed_Specialist_Territory__c
,IMAGE(&quot;https:///cleanharbors.my.salesforce.com/resource/1499014065000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;, &quot;Ok&quot;)
,IMAGE(&quot;https://cleanharbors.my.salesforce.com/resource/1499014065000/GraphicsPackNew/fatcow/farmfresh/16/flag_yellow.png&quot;, &quot;Mismatch&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Territory</label>
    <type>Text</type>
</CustomField>