force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Existing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Existing_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing TSE</label>
    <referenceTo>Technical_Sales_Expert__c</referenceTo>
    <relationshipLabel>TSE Requests</relationshipLabel>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>