force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Existing_Specialist_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Specialist_Name__c</fullName>
    <formula>Existing_Specialist__r.Technical_Sales_Expert_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing TSE Name</label>
    <type>Text</type>
</CustomField>