force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line of Business</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>