force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_Line_of_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Line_of_Business_Name__c</fullName>
    <formula>Line_of_Business__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Line of Business Name</label>
    <type>Text</type>
</CustomField>