force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>Proposed_LOB_Code__c</fullName>
    <formula>Line_of_Business__r.LOB_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed LOB Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>