force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_Product_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Product_Primary_Business__c</fullName>
    <formula>text( TSEP_ID__r.Primary_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Product Primary Business</label>
    <type>Text</type>
</CustomField>