force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed TSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>