force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_Specialist_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Specialist_Primary_Business__c</fullName>
    <formula>text( Proposed_Specialist__r.Primary_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSE Primary Business</label>
    <type>Text</type>
</CustomField>