force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_Specialist_Territory__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Specialist_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSE Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>TSE Requests (Proposed Specialist Territory)</relationshipLabel>
    <relationshipName>Technical_Sales_Expert_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>