force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Proposed_TSE_Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_TSE_Federation_ID__c</fullName>
    <formula>Proposed_Specialist__r.FederationIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed TSE Federation ID</label>
    <type>Text</type>
</CustomField>