force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Status_Image__c</fullName>
    <formula>if( Check_All__c = &quot;Review&quot;,
IMAGE(&quot;https://cleanharbors.my.salesforce.com/resource/1500423788000/GraphicsPackNew/fatcow/farmfresh/16/flag_yellow.png&quot;, &quot;Review&quot;)
,IMAGE(&quot;https://cleanharbors.my.salesforce.com/resource/1505257006000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;, &quot;Ok&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Image</label>
    <type>Text</type>
</CustomField>