force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/TSEP_ID__c.field-meta.xml
<CustomField>
    <fullName>TSEP_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Support TSE product list</description>
    <label>TSEP ID</label>
    <referenceTo>Support_TSE_Product_List__c</referenceTo>
    <relationshipName>Technical_Sales_Expert_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>