force-app/main/default/objects/Technical_Sales_Expert_Case__c/fields/Win_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Win_ID_Type__c</fullName>
    <formula>Account__r.WIN_ID_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win ID Type</label>
    <type>Text</type>
</CustomField>