force-app/main/default/objects/Technical_Sales_Expert_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Territory__c</columns>
    <columns>Case_Effective_Date__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Proposed_Product_Primary_Business__c</columns>
    <columns>Proposed_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>