force-app/main/default/objects/Technical_Sales_Expert_Case__c/listViews/Thermo_Fluids.listView-meta.xml
<ListView>
    <fullName>Thermo_Fluids</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Territory__c</columns>
    <columns>Case_Effective_Date__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Proposed_Product_Primary_Business__c</columns>
    <columns>Proposed_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposed_Product_Primary_Business__c</field>
        <operation>equals</operation>
        <value>Thermo Fluids</value>
    </filters>
    <label>Thermo Fluids</label>
    <language>en_US</language>
</ListView>